# animationai_agent

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
back/: .gitignore  pyproject.toml
back/src/back/: __init__.py
back/src/service/: test.py
front/: package.json  pnpm-lock.yaml
