[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vyuma", email = "bohda.yuuma.f5@s.mail.nagoya-u.ac.jp" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.2",
    "json-repair>=0.52.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.21",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    "langdetect>=1.0.9",
    "langgraph>=0.6.8",
    "langserve[all]>=0.3.2",
    "manim>=0.19.0",
    "markdown-it-py>=4.0.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.37.0",
]

[project.scripts]
back = "back:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
